# Wearable-Haptics-Device

./: README.md  bluetooth.py  graphing.py  graphingTest.ui  gui_v1.py  package-lock.json  package.json  plotTest.py  test2.py  twoDevices.py
 Data Processing/: README.md
 Data Processing/outputs/: Trial_1_Baseline_OvergroundWalking_Lakshmi.csv  Trial_1_Haptic_TreadmillWalking_ToeIn_Rhea.csv
 Data Processing/utils/: common.py  synchronization.py  visualizer.py
App/lkr-data/: README.md  app.json  eas.json  package-lock.json  package.json
Bluetooth/: .gitignore  FPA_algorithm.py  README.md  base_fpa.csv  bluetooth.py  const.py  gaitphase.py  hello.py  interface.py  plottingData.csv  pyproject.toml  randomNum.py  run_device.py  testSerial.py  threadsEx.py  vqf_processor.py
Bluetooth/haydn_v1/: haydn_v1.ino
Bluetooth/output/: Trial_1_Baseline_TreadmillWalking_Lakshmi.csv  Trial_1_Slow_TreadmillWalking_Rhea.csv  Trial_1_Slow_TreadmillWalking_ToeOut_Rhea.csv  (+2 more)
Data_Processing/: FPA_accuracy.py  FPA_correlation.py  FPA_training.py  pyproject.toml
Data_Processing/outputs/: Trial_1_Haptic_TreadmillWalking_ToeOut_Rhea.csv  Trial_1_Slow_TreadmillWalking_ToeIn_Rhea.csv
Laptop_PIpeline/: .gitignore  README.md  config.json  run_device.py  test_lra.py
Laptop_PIpeline/algorithms/: base.py
MCU/: IMU.py  README.md  adafruit-circuitpython-Seeed_XIAO_nRF52840_Sense-en_US-10.0.3.uf2  boot_out.txt  code.py  lra.py  shank_mounted_wearable.py
Wearable/: README.md  foot_mounted_wearable.py  shank_mounted_wearable.py
plotTest/: plotTest.ino
sketch_apr6b/: sketch_apr6b.ino
(+89 files in other folders)
